update like to receive emails
